# fruit-gym

./: .gitignore  README.md  pyproject.toml  setup.py
fruit_gym/: __init__.py
fruit_gym/configs/: strawb_hanging.yaml
fruit_gym/controllers/: opspace.py
fruit_gym/envs/: __init__.py  pick_multi_strawb.py  pick_strawb.py  randomization.py
fruit_gym/envs/xmls/: mjmodel.xml
fruit_gym/test/: gamepad_teleop.py  gamepad_wrapper_test.py  keyboard_mouse_teleop.py  wrappers.py
